
2006-11-10 cjg
 * Removed more unused stuff from Search 
 * Removed deprecated order methods 
 * Redesigned search input form
 * Search results no longer use a phrase.
 * Added User Search and History Search

2006-11-10 cjg
 * Added ordering for history search

2006-11-10 cjg
 * Changed screen layout.
 * Heading now centered
 * User toolbar now at top of screen above the h1.
 * Fixed some bugs introduced with earlier search changes.
 * Search forms now do submit when you hit return
 * Remved field_required_in_type
 * Fixed bug in error messages from user functions 
 * Fixed a bug in javascript toggle.

2006-11-10 cjg
 * Added new field to cachemap (userid)
 * Added new field to saved_search (name)
 * Disabled default and automatic calls for saved searches
 * Added some missing phrases.
 * Saved search name defaults to a description.
 * Saved search "public" defaults to false.
 * Added css to the saved search list
 * Cleaned up the search button in the template
 
2006-11-10 cjg
 * Moved code to create a login entry in the db into session
 * Registing via email now logs you on confirm
 * Add user now only appears for people with the correct permission.

2006-11-10 cjg
 * Public saved searches (including export)

2006-11-10 cjg
 * Fixed bug in EPrint screen header which meant the thing always thought
    people were an editor.
 * ditto for EPrint::View
 * Titles of EPrint Screens are now in the actual title.

2006-11-12 cjg
 * Fixed bug in looking for .head files in static pages using the dynamic
    template.
 * links in views no longer place the count inside the anchor.
 * Render toolbox now has title as optional.
 * Added "set-password" priv.
 * Made much of the site centred. Addded ep_block class which is a centered
    block, the contents of which is left aligned.
 * Fixed bug in new user - it registered the action when it should have been
    the screen itself that was linked.
 * Removed dupicated sub def. in SavedSearch.
 * Fixed bug in reset_password
  