@@ -89,15 +89,5 @@ sub render_result_row
 			n => [$n,"INTEGER"] );
 }
 
-sub paginate_opts
-{
-	my( $self ) = @_;
-
-	my %opts = $self->SUPER::paginate_opts;
-	
-	$opts{container} = $self->{session}->make_element( "table" );
-	
-	return %opts;
-}
 
 
